# vscode-dbt-power-user-defer-issue-reproduce

./: dbt_project.yml  profiles.yml  pyproject.toml
models/: bar.sql
